# ifl-tut

./: .ghci  .gitignore  048-256.diff  ChangeLog.md  LICENSE  README.md  building  dbuilding  ex608.hs  executing  ghcing  hie.yaml  ifl-tut.cabal  ifl-tut.cabal.orig  ilifter  package.yaml  res.txt  resetting  setting  stack.yaml
app/: Main.hs
app/gm1/: Main.hs
app/gm2/: Main.hs
app/gm3/: Main.hs
app/gm4/: Main.hs
app/gm5/: Main.hs
app/gm6/: Main.hs
app/gm7/: Main.hs
app/lift1/: Main.hs
app/lift2/: Main.hs
app/lift3/: Main.hs
app/lift4/: Main.hs
app/pgm1/: Main.hs
app/pgm3/: Main.hs
app/pgm4/: Main.hs
app/ti1/: Main.hs
app/ti2/: Main.hs
app/ti3/: Main.hs
app/ti4/: Main.hs
app/ti5/: Main.hs
app/ti5a/: Main.hs
app/ti5b/: Main.hs
app/ti5c/: Main.hs
app/ti5cp/: Main.hs
app/ti5mgc/: Main.hs
app/ti5rvp/: Main.hs
app/tim1/: Main.hs
app/tim1gc/: Main.hs
app/tim2/: Main.hs
app/tim3/: Main.hs
app/tim4/: Main.hs
app/tim5/: Main.hs
app/tim6/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.2.1/: ifl-tut-0.2.8.1-inplace.conf  package.cache
doc/: Chap01.md  Chap02.md  Chap03.md  mark1.txt  mark3.txt
prog/: B100.ifl  B131.ifl  B201.ifl  B203.ifl  B313.ifl  B322.ifl  B323.ifl  B342.ifl  E311.ifl  E337.ifl  ex4.21b.ifl  ex4.23-2.ifl  ex4.23.ifl  ex4.25.ifl  ex5.10.ifl  fact.ifl  fib.ifl  hoge.ifl  pgmdeadlock.ifl  prog00.ifl  prog01.ifl  prog04.ifl  prog06.ifl  prog14.ifl  prog17.ifl  prog18.ifl  prog19.ifl  prog20.ifl  prog21.ifl  prog370.ifl  prog371.ifl  prog380.ifl  prog414.ifl  prog425-1-1.ifl  prog426.ifl  prog441-0.ifl  prog442-1.ifl  prog442-2.ifl  prog454-0.ifl  prog454-3.ifl  (+2 more)
prog/lift3/: ex608.ifl  prog653.ifl
prog/lift4/: sample0.ifl  sample1.ifl  sample2.ifl  sample661.ifl  sample661add.ifl  sample672.ifl
prog/misc/: B312.ifl  B321.ifl  B322.ifl  B323-1.ifl  B323.ifl  B341.ifl  E318.ifl  E329.ifl  ex4.16.ifl  ex4.17.ifl  ex4.21.ifl  ex4.23-2.ifl  ex4.23-3.ifl  ex4.29.ifl  ex4.4.ifl  ex4.9.ifl  fib.ifl  hoge.ifl  p176.ifl  prog02.ifl  prog03.ifl  prog05.ifl  prog07.ifl  prog08.ifl  prog09.ifl  prog10.ifl  prog11.ifl  prog12.ifl  prog13.ifl  prog16.ifl  prog18.ifl  prog20.ifl  prog22.ifl  prog387.ifl  prog425-1-2.ifl  prog441-1.ifl  prog451.ifl  prog454-1.ifl  prog457.ifl  prog471.ifl  (+3 more)
prog/pgm2/: deadlock.ifl  ex5.06.1.ifl  ex5.06.2.ifl  ex5.10.ifl  letrec.ifl  letrec2.ifl  pgmerror.ifl  tarai.ifl
prog/pgm3/: twicep.ifl
prog/pgm4/: dsum.ifl  fib.ifl
src/: Bool.hs  Bop.hs  Heap.hs  Iseq.hs  Lambda.hs  Language.gs  Language.hs  Lex.hs  Lexeme.hs  Lib.hs  List.hs  Nat.hs  Parse.hs  Parser.hs  ParserC.hs  ParserCombinator.hs  Pretty.hs  Singleton.hs  Stack.hs  Utils.hs
src/Gmachine/: AExpr.hs  AExprLet.hs
src/Gmachine/Mark1/: Code.hs  Machine.hs  Node.hs  PPrint.hs  State.hs
src/Gmachine/Mark2/: Code.hs  Machine.hs  Node.hs  PPrint.hs  State.hs
src/Gmachine/Mark3/: Code.hs  Machine.hs  Node.hs  PPrint.hs  State.hs
src/Gmachine/Mark4/: Code.hs  Machine.hs  Node.hs  PPrint.hs  State.hs
src/Gmachine/Mark5/: Code.hs  Machine.hs  Node.hs  PPrint.hs  State.hs
src/Gmachine/Mark6/: Code.hs  Machine.hs  Node.hs  PPrint.hs  State.hs
src/Gmachine/Mark7/: Code.hs  Compiler.hs  Machine.hs  Node.hs  PPrint.hs  State.hs
src/Lifter/: FreeVars.hs  Mark1.hs  PPrint.hs
src/Lifter/Mark1/: Lifter.hs  Rename.hs
src/Lifter/Mark2/: Lifter.hs  Rename.hs
src/Lifter/Mark3/: Abstract.hs  Collect.hs  FreeVars.hs  Lifter.hs  Rename.hs
src/Lifter/Mark4/: Abstract.hs  AddLevel.hs  Collect.hs  Floating.hs  FreeVars.hs  FullLazy.hs  IdentifyMFE.hs  LambdaLift.hs  Lifter.hs  README.md  Rename.hs  SeparateLambda.hs
src/ParaG/Mark1/: Code.hs  Compiler.hs  Machine.hs  Node.hs  PPrint.hs  State.hs
src/ParaG/Mark2/: Code.hs  Compiler.hs  Machine.hs  Node.hs  PPrint.hs  State.hs
src/ParaG/Mark3/: Code.hs  Compiler.hs  Machine.hs  Node.hs  PPrint.hs  State.hs
src/ParaG/Mark4/: Code.hs  Compiler.hs  Machine.hs  PPrint.hs  State.hs
src/TIM/Mark1/: Code.hs  Machine.hs  PPrint.hs  State.hs
src/TIM/Mark1gc/: Code.hs  Frame.hs  GC.hs  Machine.hs  PPrint.hs  State.hs
src/TIM/Mark2/: Code.hs  Frame.hs  GC.hs  Machine.hs  PPrint.hs  State.hs
src/TIM/Mark3/: Code.hs  Frame.hs  GC.hs  Machine.hs  PPrint.hs  State.hs
src/TIM/Mark4/: Code.hs  Frame.hs  GC.hs  Machine.hs  PPrint.hs  State.hs
src/TIM/Mark5/: Code.hs  Frame.hs  GC.hs  Machine.hs  PPrint.hs  State.hs
src/TIM/Mark6/: Code.hs  Frame.hs  GC.hs  Machine.hs  PPrint.hs  State.hs
src/Template/: Mark1.hs  Mark2.hs  Mark3.hs  Mark4.hs  Mark5.hs  Mark5a.hs  Mark5altprimitive.hs  Mark5print.hs  MultMachine.hs
src/Template/Mark5/: Machine.hs  Node.hs  PPrint.hs  Primitive.hs  State.hs
src/Template/Mark5a/: Machine.hs  PPrint.hs  State.hs
src/Template/Mark5b/: Machine.hs  PPrint.hs  State.hs
src/Template/Mark5c/: Machine.hs  PPrint.hs  State.hs
src/Template/Mark5cp/: Machine.hs  PPrint.hs  State.hs
src/Template/Mark5mgc/: Machine.hs  PPrint.hs  State.hs
src/Template/Mark5rvp/: Machine.hs  PPrint.hs  State.hs
test/: UtilsSpec.hs  doctests.hs
